--- a/files/bot/bot.service.j2
+++ b/files/bot/bot.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=Unibo bot 
+Description=Informabot
 Documentation=https://github.com/csunibo/informabot.git
 
 After=network.target
@@ -7,9 +7,9 @@ After=network.target
 [Service]
 User=bot
 Group=bot
-ExecStart=node index.js {{ bot_token }}
-WorkingDirectory=/opt/bot/source/src
-ReadWriteDirectories=/opt/bot/source/src
+ExecStart=/opt/bot/bot {{ bot_token }}
+WorkingDirectory=/opt/bot/source/
+ReadWriteDirectories=/opt/bot/source
 
 [Install]
 WantedBy=multi-user.target
