--- a/files/bot/bot.service.j2
+++ b/files/bot/bot.service.j2
@@ -7,7 +7,8 @@ After=network.target
 [Service]
 User=bot
 Group=bot
-ExecStart=/opt/bot/bot {{ bot_token }}
+Environment=TOKEN={{ bot_token }}
+ExecStart=/opt/bot/bot 
 WorkingDirectory=/opt/bot/source/
 ReadWriteDirectories=/opt/bot/source
 
