Remove "human" logging from fileseeker

--- a/files/fileseeker/fileseeker.service.j2
+++ b/files/fileseeker/fileseeker.service.j2
@@ -12,8 +12,7 @@ ReadWriteDirectories=/opt/fileseeker/source
 ExecStart=/opt/fileseeker/source/fileseeker \
     --basepath "http://csunibo.github.io" \
     --addr "0.0.0.0:80" \
-    --proxy \
-    --human
+    --proxy
 
 [Install]
 WantedBy=multi-user.target
