added GOTRACEBACK=crash for bot crashes

--- a/files/bot/bot.service.j2
+++ b/files/bot/bot.service.j2
@@ -8,6 +8,7 @@ After=network.target
 User=bot
 Group=bot
 Environment=TOKEN={{ bot_token }}
+Environment=GOTRACEBACK=crash
 ExecStart=/opt/bot/bot 
 WorkingDirectory=/opt/bot/source/
 ReadWriteDirectories=/opt/bot/source
