--- a/files/csgitbot/.env.j2
+++ b/files/csgitbot/.env.j2
@@ -1,1 +1,4 @@
-GITHUB_TOKEN={{bot_token}}
+CLIENT_ID={{client_id}}
+CLIENT_SECRET={{client_secret}}
+GITHUB_TOKEN={{github_token}}
+JWT_SECRET={{client_secret}}
