--- a/files/fileseeker/fileseeker.service.j2
+++ b/files/fileseeker/fileseeker.service.j2
@@ -7,12 +7,6 @@ After=network.target
 [Service]
 User=fileseeker
 Group=fileseeker
-WorkingDirectory=/opt/fileseeker/source
-ReadWriteDirectories=/opt/fileseeker/source
-ExecStart=/opt/fileseeker/source/fileseeker \
-    --basepath "http://csunibo.github.io" \
-    --addr "0.0.0.0:80" \
-    --proxy
-
-[Install]
-WantedBy=multi-user.target
+ReadWriteDirectories=/opt/fileseeker/
+WorkingDirectory=/opt/fileseeker/source/
+ExecStart=/opt/fileseeker/source/fileseeker -d /opt/fileseeker/data/
