--- a/files/bot/bot.service.j2
+++ b/files/bot/bot.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=Informabot
-Documentation=https://github.com/csunibo/informabot.git
+Documentation=https://github.com/cartabinaria/informabot.git
 
 After=network.target
 
