--- a/files/cslogin/cslogin.service.j2
+++ b/files/cslogin/cslogin.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=CSLogin
-Documentation=https://github.com/csunibo/auth
+Documentation=https://github.com/cartabinaria/auth
 
 After=network.target
 
