--- a/files/dynamik/dynamik.service.j2
+++ b/files/dynamik/dynamik.service.j2
@@ -1,6 +1,6 @@
 [Unit]
-Description=CSUnibo Dynamik website
-Documentation=https://github.com/csunibo/dynamik
+Description=CartaBinaria Dynamik website
+Documentation=https://github.com/cartabinaria/dynamik
 
 After=network.target
 
