--- a/files/fileseeker/fileseeker.service.j2
+++ b/files/fileseeker/fileseeker.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=Unibo Fileseeker
-Documentation=https://github.com/csunibo/fileseeker
+Documentation=https://github.com/cartabinaria/fileseeker
 
 After=network.target
 
