--- a/files/homework/homework-server.service.j2
+++ b/files/homework/homework-server.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=Homework server
-Documentation=https://github.com/csunibo/homework.git
+Documentation=https://github.com/cartabinaria/homework.git
 
 After=network.target
 
