--- a/files/polleg/polleg.service.j2
+++ b/files/polleg/polleg.service.j2
@@ -1,6 +1,6 @@
 [Unit]
 Description=Polleg
-Documentation=https://github.com/csunibo/polleg
+Documentation=https://github.com/cartabinaria/polleg
 
 After=network.target
 
