--- a/files/fileseeker/fileseeker.service.j2
+++ b/files/fileseeker/fileseeker.service.j2
@@ -9,4 +9,4 @@ User=fileseeker
 Group=fileseeker
 ReadWriteDirectories=/opt/fileseeker/
 WorkingDirectory=/opt/fileseeker/source/
-ExecStart=/opt/fileseeker/fileseeker -d /opt/fileseeker/data/
+ExecStart=/opt/fileseeker/fileseeker -c /opt/fileseeker/config.toml
