add: restart service if it fails

--- a/files/bot/bot.service.j2
+++ b/files/bot/bot.service.j2
@@ -12,6 +12,8 @@ Environment=GOTRACEBACK=crash
 ExecStart=/opt/bot/bot 
 WorkingDirectory=/opt/bot/source/
 ReadWriteDirectories=/opt/bot/source
+Restart=always
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
