fix: cslogin config + service

--- a/files/cslogin/config.toml.j2
+++ b/files/cslogin/config.toml.j2
@@ -1,6 +1,7 @@
 listen = "0.0.0.0:3000"
 base_url = "http://cslogin.students.cs.unibo.it"
 client_urls = ["http://localhost:5173"]
+cookie_domain = "students.cs.unibo.it"
  
 oauth_client_id = ""
 oauth_client_secret = ""
