--- a/files/polleg/polleg.service.j2
+++ b/files/polleg/polleg.service.j2
@@ -8,9 +8,10 @@ After=network.target
 User=polleg
 Group=polleg
 Environment=GOTRACEBACK=crash
-ExecStart=/opt/polleg/polleg 
+ExecStart=/opt/polleg/polleg /opt/polleg/config.toml
 WorkingDirectory=/opt/polleg
 ReadWriteDirectories=/opt/polleg
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
