--- a/files/polleg/config.toml.j2
+++ b/files/polleg/config.toml.j2
@@ -2,3 +2,6 @@ listen = "0.0.0.0:3000"
 client_urls = ["http://localhost:5173"]
 db_uri = "host=localhost user=polleg password=pollegpwd dbname=pollegdb port=5432 sslmode=disable TimeZone=Europe/Rome"
 auth_uri = "http://cslogin.students.cs.unibo.it"
+db_trace = false
+
+# vi: ft=toml
